--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,19 +19,17 @@
         <item name="android:colorBackground">@color/punisher_background</item>
         <item name = "colorOnBackground">@color/punisher_button</item>
         <item name="colorPrimary">@color/punisher_navBar</item>
+        <item name="android:itemBackground">@color/punisher_navBar</item>
+        <item name = "android:textColor">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/punisher_navBar</item>
-    </style>
-
-    <style name="Melodrama" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="android:colorBackground">@color/melodrama_button</item>
-        <item name = "colorPrimary">@color/melodrama_navBar</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/melodrama_background</item>
     </style>
 
     <style name="Evermore" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:colorBackground">@color/evermore_background</item>
         <item name = "colorOnBackground">@color/evermore_navBar</item>
+        <item name="android:itemBackground">@color/evermore_button</item>
         <item name="colorPrimary">@color/evermore_button</item>
+        <item name = "android:textColor">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/evermore_button</item>
     </style>
 
@@ -39,12 +37,16 @@
         <item name="android:colorBackground">@color/sunset_background</item>
         <item name = "colorOnBackground">@color/sunset_button</item>
         <item name="colorPrimary">@color/sunset_button</item>
+        <item name="android:itemBackground">@color/sunset_button</item>
+        <item name = "android:textColor">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/sunset_button</item>
     </style>
 
     <style name="Multiply" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:colorBackground">#1aca54</item>
         <item name = "colorOnBackground">@color/black</item>
+        <item name = "android:textColor">@color/white</item>
+        <item name="android:itemBackground">@color/black</item>
         <item name="colorPrimary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
     </style>
