--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -13,7 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:fontFamily="sans-serif-black"
         android:text="Crying Leaderboard"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="48sp"
         tools:layout_editor_absoluteX="3dp"
@@ -23,9 +25,10 @@
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="28dp"
         tools:layout_editor_absoluteX="3dp"
         tools:layout_editor_absoluteY="9dp" />
 
@@ -33,73 +36,81 @@
         android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
-
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="28dp" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="28dp"/>
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="28dp" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="28dp"/>
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="28dp"/>
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="28dp"/>
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="28dp"/>
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="28dp" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="28dp" />
 
 </LinearLayout>
