--- a/app/src/main/res/layout/activity_sign_up_profile.xml
+++ b/app/src/main/res/layout/activity_sign_up_profile.xml
@@ -17,8 +17,10 @@
         android:layout_width="143dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="First Name"
+        android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#CFCFCF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,8 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Last Name"
+        android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#CFCFCF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,11 +57,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.209" >
+
         <RadioButton
             android:id="@+id/cryLess"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cry Less"
+            android:textColor="#FFFFFF"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cry More"
+            android:textColor="#FFFFFF"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -104,21 +111,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.396"
         android:orientation="horizontal">
+
         <RadioButton
             android:id="@+id/showCry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Share Your Cry Data"
-            android:textSize="12sp"
-             />
+            android:textColor="#FFFFFF"
+            android:textSize="12sp" />
 
         <RadioButton
             android:id="@+id/noShowCry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Don't share your cry data"
-            android:textSize="12sp"
-             />
+            android:textColor="#FFFFFF"
+            android:textSize="12sp" />
     </RadioGroup>
 
 
@@ -168,6 +176,8 @@
         android:ems="10"
         android:hint="Stressor"
         android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#CFCFCF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -195,6 +205,8 @@
         android:ems="10"
         android:hint="Location"
         android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#CFCFCF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
