--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,8 @@
         <item name = "colorOnBackground">@color/punisher_button</item>
         <item name="colorPrimary">@color/punisher_navBar</item>
         <item name="android:itemBackground">@color/punisher_navBar</item>
+        <item name = "buttonTint">@color/punisher_navBar</item>
+        <item name ="android:indeterminateTint">@color/punisher_navBar</item>
         <item name = "android:textColor">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/punisher_navBar</item>
     </style>
@@ -29,6 +31,8 @@
         <item name = "colorOnBackground">@color/evermore_navBar</item>
         <item name="android:itemBackground">@color/evermore_button</item>
         <item name="colorPrimary">@color/evermore_button</item>
+        <item name = "buttonTint">@color/evermore_button</item>
+        <item name ="android:indeterminateTint">@color/evermore_button</item>
         <item name = "android:textColor">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/evermore_button</item>
     </style>
@@ -38,6 +42,8 @@
         <item name = "colorOnBackground">@color/sunset_button</item>
         <item name="colorPrimary">@color/sunset_button</item>
         <item name="android:itemBackground">@color/sunset_button</item>
+        <item name ="android:indeterminateTint">@color/sunset_button</item>
+        <item name = "buttonTint">@color/sunset_button</item>
         <item name = "android:textColor">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/sunset_button</item>
     </style>
@@ -46,15 +52,11 @@
         <item name="android:colorBackground">#1aca54</item>
         <item name = "colorOnBackground">@color/black</item>
         <item name = "android:textColor">@color/white</item>
+        <item name ="android:indeterminateTint">@color/black</item>
+        <item name = "buttonTint">@color/black</item>
         <item name="android:itemBackground">@color/black</item>
         <item name="colorPrimary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
     </style>
 
-    <style name="Default" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="android:colorBackground">#808080</item>
-        <item name = "colorOnBackground">@color/black</item>
-        <item name="colorPrimary">@color/black</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
-    </style>
 </resources>
