--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -40,21 +40,21 @@
     <TextView
         android:id="@+id/likelyHour"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/likelyDay"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/likelyLocation"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
         android:text="TextView"
         android:textSize="18sp" />
