styling again lol

--- a/app/src/main/res/layout/activity_log_in_screen.xml
+++ b/app/src/main/res/layout/activity_log_in_screen.xml
@@ -24,6 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="@color/white"
+        android:textColorHint="#CFCFCF"
         android:inputType="textPersonName"
         android:hint="Email"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,6 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="@color/white"
+        android:textColorHint="#CFCFCF"
         android:inputType="textPersonName"
         android:hint="Password"
         app:layout_constraintBottom_toBottomOf="parent"
