--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -11,27 +11,50 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
-    android:layout_marginLeft="40dp"
     android:orientation="vertical"
     tools:context=".Statistics">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your Monthly Cry Data"
+        android:layout_gravity="center"
+        android:textSize="18sp" />
 
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lineChart"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_width="350dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your Stressor Data"
+        android:layout_gravity="center"
+        android:textSize="18sp" />
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barChart"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_width="350dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your Location Data"
+        android:layout_gravity="center"
+        android:textSize="18sp" />
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barChartLocation"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_width="350dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
          />
 <!--
 </com.github.mikephil.charting.charts.BarChart>
